tests/analyzer/errors/trait.ray
trait Foo {
    fn first()
    fn first()
}

trait Empty {}
trait One {
    fn onlyFn()
}

struct Bar {
    impl Empty {}
    impl Empty {}
}

struct Baz {
    impl Empty {
        fn nonExistant() {}
    }
}

struct Buz {
    impl One {}
}

struct EmptyStruct {}
struct OtherStruct {
    impl EmptyStruct {}
}
struct LastStruct {
    impl NonExistentTrait {}
}

trait DefVal {
    fn foo(a=1)
}

fn main() {
    One.onlyFn()
}
